<resources>
    <string name="app_name">LaptopMart</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Nomor Telepon</string>
    <string name="name">Nama</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Buat Akun</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login_account">Login Akun</string>
    <string name="not_have_account">Belum punya akun?</string>
    <string name="process">Memproses…</string>
    <string name="logout">Logout</string>
    <string name="banner">Banner</string>
    <string name="profile">Profil</string>
    <string name="email_phone">Email atau Nomor Telepon</string>
    <string name="brand">Brand</string>
    <string name="description">Deskripsi</string>
    <string name="price">Harga</string>
    <string name="stock">Stok</string>
    <string name="save">Simpan</string>
    <string name="image">Pilih gambar</string>
    <string name="laptop">Laptop</string>
    <string name="update">Update Laptop</string>
    <string name="delete">Hapus</string>
    <string name="cart">Keranjang</string>
    <string name="buy">Beli</string>
    <string name="search">Cari</string>
    <string name="checkout">Checkout</string>
    <string name="back">Kembali</string>
    <string name="add_laptop">Tambah Laptop</string>
    <string name="search_laptop">Cari Laptop</string>
    <string name="order_list">Daftar Pesanan</string>
    <string name="name_or_brand">Ketik nama atau brand...</string>
    <string name="laptop_not_found">Laptop tidak ditemukan</string>
    <string name="order_history">Riwayat Pesanan</string>
    <string name="order_detail">Detail Pesanan</string>
</resources>